# mobius

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.ko.md  README.md  SECURITY.md  UNINSTALL.md  llms-full.txt  llms.txt  project-context.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: lint.yml  release.yml  test.yml
.mobius/: mechanical.toml
commands/: cancel.md  evaluate.md  evolve.md  help.md  interview.md  ralph.md  run.md  seed.md  setup.md  status.md  tutorial.md  unstuck.md  welcome.md
crates/mobius-tui/: Cargo.toml  README.md
crates/mobius-tui/src/: db.rs  main.rs
crates/mobius-tui/src/views/: dashboard.rs  lineage.rs  session_selector.rs
docs/: README.md  architecture.md  cli-reference.md  config-reference.md  getting-started.md  mobius-clone-loop.md  platform-support.md  runtime-capability-matrix.md
docs/api/: README.md  core.md  mcp.md
docs/contributing/: architecture-overview.md  findings-registry.md  issue-quality-policy.md  key-patterns.md  testing-guide.md
docs/examples/: mcp-config.yaml
docs/guides/: evaluation-pipeline.md  evolution-loop.md  issue-176-subagent-mcp-inheritance.md  seed-authoring.md  tui-usage.md
docs/images/: PLACEHOLDER_README.md
docs/runtime-guides/: claude-code.md  codex.md
examples/: coordinator_test_seed.yaml  dummy_seed.yaml  parallel_subac_test_seed.yaml  subac_test_seed.yaml  test_display.py
examples/task_manager/: README.md  __init__.py  __main__.py  cli.py  models.py  storage.py
hooks/: hooks.json
scripts/: drift-monitor.py  install.sh  keyword-detector.py  mcp-serve.sh  ralph-rewind.py  ralph.py  ralph.sh  session-start.py  sync-plugin-version.py  version-check.py
skills/brownfield/: SKILL.md
skills/cancel/: SKILL.md
skills/clone/: SKILL.md
skills/evaluate/: SKILL.md
skills/evolve/: SKILL.md
skills/help/: SKILL.md
skills/interview/: SKILL.md
skills/pm/: SKILL.md
skills/qa/: SKILL.md
skills/ralph/: SKILL.md
skills/run/: SKILL.md
skills/seed/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/tutorial/: SKILL.md
skills/unstuck/: SKILL.md
skills/update/: SKILL.md
skills/welcome/: SKILL.md
src/mobius/: __init__.py  __main__.py  codex_permissions.py
src/mobius/agents/: __init__.py  advocate.md  analysis-agent.md  architect.md  code-executor.md  codebase-explorer.md  consensus-reviewer.md  contrarian.md  evaluator.md  hacker.md  judge.md  loader.py  ontologist.md  ontology-analyst.md  qa-judge.md  research-agent.md  researcher.md  seed-architect.md  semantic-evaluator.md  simplifier.md  socratic-interviewer.md
src/mobius/bigbang/: __init__.py  ambiguity.py  brownfield.py  explore.py  interview.py  pm_document.py  pm_interview.py  pm_seed.py  question_classifier.py  seed_generator.py
src/mobius/cli/: __init__.py  main.py
src/mobius/clone/: __init__.py  engine.py
src/mobius/codex/: __init__.py  artifacts.py  mobius.md
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_cli_commands.py  test_full_workflow.py  test_session_persistence.py
tests/fixtures/: test_atomicity_seed.yml
tests/integration/: conftest.py  test_codex_cli_passthrough_smoke.py  test_codex_skill_fallback.py  test_codex_skill_smoke.py  test_entry_point.py
tests/unit/: test_artifact_collector.py  test_codex_artifacts.py  test_convergence.py  test_dashboard.py  test_dependencies_configured.py  test_evolve_rewind.py  test_evolve_step.py  test_graceful_shutdown.py  test_main_entry_point.py  test_module_structure.py  test_project_initialization.py  test_projector_rewind.py  test_ralph_parser.py  test_ralph_rewind.py  test_regression.py  test_tooling_configuration.py  test_verification.py
tools/: sync_github_project.py
(+358 files in other folders)
