[package]
name = "mobius-tui"
version = "0.1.0"
edition = "2021"
description = "Native TUI monitor for Mobius workflows, built with SuperLightTUI"
license = "MIT"
rust-version = "1.74"
repository = "https://github.com/tabtoyou/mobius"
keywords = ["tui", "mobius", "monitor", "terminal"]

[[bin]]
name = "mobius-tui"
path = "src/main.rs"

[dependencies]
superlighttui = "0.7.1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde_json = "1"
